# musly

./: CMakeLists.txt  README.md
libmusly/: CMakeLists.txt  gaussianstatistics.cpp  mutualproximity.cpp
libmusly/decoders/: libav.cpp
libmusly/methods/: timbre.cpp
musly/: CMakeLists.txt  main.cpp
